--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" ref="stylesheet" type="text/css">
     <title>Ping Pong</title>
   </head>
   <body>
   <div class = "container">
     <h1 class = "jumbotron">Ping Pong!</h1>
+    <h3>How to play:</h3>
+      <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
+      <ul>
+        <li>Numbers divisible by 3 are replaced with "ping"</li>
+        <li>Numbers divisible by 5 are replaced with "pong"</li>
+        <li>Numbers divisible by 15 are replaced with "ping-pong"</li>
+    <form id= "pingpong">
+      <div class="form-group">
+        <label for="number">Enter a number:</label>
+        <input id="number" class = "form-control" type="number">
+      </div>
+    </form>
   </div>
   </body>
 </html>
