working function for counting up to number. Count starts with 10

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <label for="number">Enter a number:</label>
         <input id="number" class = "form-control" type="number">
       </div>
+      <button type="submit" class = "btn btn-primary">Submit</button>
     </form>
+    <div class = "result"></div>
   </div>
   </body>
 </html>
