--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       </div>
       <button type="submit" class = "btn btn-primary">Submit</button>
     </form>
-    <div class = "result"></div>
+    <div class = "result">
+      <ul id = "resultsList"></ul>
+    </div>
   </div>
   </body>
 </html>
